// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion List Default should match snapshot 1`] = `
<div>
  <section
    class="section space-y-8"
    itemscope=""
    itemtype="https://schema.org/FAQPage"
  >
    <header
      class="richtext font-typography-body-light-weight leading-typography-body-light text-colour-onSurface-light dark:text-colour-onSurface-dark text-center"
    >
      <div
        class="richtext mx-auto w-full space-y-[1em] [&>:first-child]:!mt-0"
      >
        <h2
          class="mb-2 dark:text-colour-onSurface-dark text-typography-headline-bold font-typography-headline-bold-weight leading-typography-headline-bold tracking-typography-headline-bold"
        >
          Accordion Intro
        </h2>
      </div>
    </header>
    <div
      class="mx-auto w-full max-w-screen-md grid gap-4"
    >
      <details
        class="accordion"
        itemprop="mainEntity"
        itemscope=""
        itemtype="https://schema.org/Question"
      >
        <summary
          class="py-[10px] font-typography-body font-typography-body-weight text-typography-body leading-typography-body text-colour-onSurface-light dark:text-colour-onSurface-dark border-b border-colour-onSurface-outline-light dark:border-colour-onSurface-outline-dark"
          itemprop="name"
        >
          Question 1
        </summary>
        <div
          class="anim-fade-to-b mt-2"
          itemprop="acceptedAnswer"
          itemscope=""
          itemtype="https://schema.org/Answer"
        >
          <div
            class="richtext font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light text-colour-onSurface-light dark:text-colour-onSurface-dark"
            itemprop="text"
          >
            <div
              class="richtext mx-auto w-full space-y-[1em] [&>:first-child]:!mt-0"
            >
              <p
                class="mb-2 dark:text-colour-onSurface-dark text-typography-body font-typography-body-weight leading-typography-body tracking-typography-body"
              >
                Content for Question 1
              </p>
            </div>
          </div>
        </div>
      </details>
      <details
        class="accordion"
        itemprop="mainEntity"
        itemscope=""
        itemtype="https://schema.org/Question"
      >
        <summary
          class="py-[10px] font-typography-body font-typography-body-weight text-typography-body leading-typography-body text-colour-onSurface-light dark:text-colour-onSurface-dark border-b border-colour-onSurface-outline-light dark:border-colour-onSurface-outline-dark"
          itemprop="name"
        >
          Question 2
        </summary>
        <div
          class="anim-fade-to-b mt-2"
          itemprop="acceptedAnswer"
          itemscope=""
          itemtype="https://schema.org/Answer"
        >
          <div
            class="richtext font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light text-colour-onSurface-light dark:text-colour-onSurface-dark"
            itemprop="text"
          >
            <div
              class="richtext mx-auto w-full space-y-[1em] [&>:first-child]:!mt-0"
            >
              <p
                class="mb-2 dark:text-colour-onSurface-dark text-typography-body font-typography-body-weight leading-typography-body tracking-typography-body"
              >
                Content for Question 2
              </p>
            </div>
          </div>
        </div>
      </details>
      <details
        class="accordion"
        itemprop="mainEntity"
        itemscope=""
        itemtype="https://schema.org/Question"
      >
        <summary
          class="py-[10px] font-typography-body font-typography-body-weight text-typography-body leading-typography-body text-colour-onSurface-light dark:text-colour-onSurface-dark border-b border-colour-onSurface-outline-light dark:border-colour-onSurface-outline-dark"
          itemprop="name"
        >
          Question 3
        </summary>
        <div
          class="anim-fade-to-b mt-2"
          itemprop="acceptedAnswer"
          itemscope=""
          itemtype="https://schema.org/Answer"
        >
          <div
            class="richtext font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light text-colour-onSurface-light dark:text-colour-onSurface-dark"
            itemprop="text"
          >
            <div
              class="richtext mx-auto w-full space-y-[1em] [&>:first-child]:!mt-0"
            >
              <p
                class="mb-2 dark:text-colour-onSurface-dark text-typography-body font-typography-body-weight leading-typography-body tracking-typography-body"
              >
                Content for Question 3
              </p>
            </div>
          </div>
        </div>
      </details>
    </div>
  </section>
</div>
`;

exports[`Accordion List Horizontal should match snapshot 1`] = `
<div>
  <section
    class="section grid gap-8 md:grid-cols-2"
    itemscope=""
    itemtype="https://schema.org/FAQPage"
  >
    <header
      class="richtext font-typography-body-light-weight leading-typography-body-light text-colour-onSurface-light dark:text-colour-onSurface-dark md:sticky-below-header self-start [--offset:1rem]"
    >
      <div
        class="richtext mx-auto w-full space-y-[1em] [&>:first-child]:!mt-0"
      >
        <h2
          class="mb-2 dark:text-colour-onSurface-dark text-typography-headline-bold font-typography-headline-bold-weight leading-typography-headline-bold tracking-typography-headline-bold"
        >
          Accordion Intro
        </h2>
      </div>
    </header>
    <div
      class="mx-auto w-full max-w-screen-md grid gap-4"
    >
      <details
        class="accordion"
        itemprop="mainEntity"
        itemscope=""
        itemtype="https://schema.org/Question"
      >
        <summary
          class="py-[10px] font-typography-body font-typography-body-weight text-typography-body leading-typography-body text-colour-onSurface-light dark:text-colour-onSurface-dark border-b border-colour-onSurface-outline-light dark:border-colour-onSurface-outline-dark"
          itemprop="name"
        >
          Question 1
        </summary>
        <div
          class="anim-fade-to-b mt-2"
          itemprop="acceptedAnswer"
          itemscope=""
          itemtype="https://schema.org/Answer"
        >
          <div
            class="richtext font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light text-colour-onSurface-light dark:text-colour-onSurface-dark"
            itemprop="text"
          >
            <div
              class="richtext mx-auto w-full space-y-[1em] [&>:first-child]:!mt-0"
            >
              <p
                class="mb-2 dark:text-colour-onSurface-dark text-typography-body font-typography-body-weight leading-typography-body tracking-typography-body"
              >
                Content for Question 1
              </p>
            </div>
          </div>
        </div>
      </details>
      <details
        class="accordion"
        itemprop="mainEntity"
        itemscope=""
        itemtype="https://schema.org/Question"
      >
        <summary
          class="py-[10px] font-typography-body font-typography-body-weight text-typography-body leading-typography-body text-colour-onSurface-light dark:text-colour-onSurface-dark border-b border-colour-onSurface-outline-light dark:border-colour-onSurface-outline-dark"
          itemprop="name"
        >
          Question 2
        </summary>
        <div
          class="anim-fade-to-b mt-2"
          itemprop="acceptedAnswer"
          itemscope=""
          itemtype="https://schema.org/Answer"
        >
          <div
            class="richtext font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light text-colour-onSurface-light dark:text-colour-onSurface-dark"
            itemprop="text"
          >
            <div
              class="richtext mx-auto w-full space-y-[1em] [&>:first-child]:!mt-0"
            >
              <p
                class="mb-2 dark:text-colour-onSurface-dark text-typography-body font-typography-body-weight leading-typography-body tracking-typography-body"
              >
                Content for Question 2
              </p>
            </div>
          </div>
        </div>
      </details>
      <details
        class="accordion"
        itemprop="mainEntity"
        itemscope=""
        itemtype="https://schema.org/Question"
      >
        <summary
          class="py-[10px] font-typography-body font-typography-body-weight text-typography-body leading-typography-body text-colour-onSurface-light dark:text-colour-onSurface-dark border-b border-colour-onSurface-outline-light dark:border-colour-onSurface-outline-dark"
          itemprop="name"
        >
          Question 3
        </summary>
        <div
          class="anim-fade-to-b mt-2"
          itemprop="acceptedAnswer"
          itemscope=""
          itemtype="https://schema.org/Answer"
        >
          <div
            class="richtext font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light text-colour-onSurface-light dark:text-colour-onSurface-dark"
            itemprop="text"
          >
            <div
              class="richtext mx-auto w-full space-y-[1em] [&>:first-child]:!mt-0"
            >
              <p
                class="mb-2 dark:text-colour-onSurface-dark text-typography-body font-typography-body-weight leading-typography-body tracking-typography-body"
              >
                Content for Question 3
              </p>
            </div>
          </div>
        </div>
      </details>
    </div>
  </section>
</div>
`;

exports[`Accordion List Vertical should match snapshot 1`] = `
<div>
  <section
    class="section space-y-8"
    itemscope=""
    itemtype="https://schema.org/FAQPage"
  >
    <header
      class="richtext font-typography-body-light-weight leading-typography-body-light text-colour-onSurface-light dark:text-colour-onSurface-dark text-center"
    >
      <div
        class="richtext mx-auto w-full space-y-[1em] [&>:first-child]:!mt-0"
      >
        <h2
          class="mb-2 dark:text-colour-onSurface-dark text-typography-headline-bold font-typography-headline-bold-weight leading-typography-headline-bold tracking-typography-headline-bold"
        >
          Accordion Intro
        </h2>
      </div>
    </header>
    <div
      class="mx-auto w-full max-w-screen-md grid gap-4"
    >
      <details
        class="accordion"
        itemprop="mainEntity"
        itemscope=""
        itemtype="https://schema.org/Question"
      >
        <summary
          class="py-[10px] font-typography-body font-typography-body-weight text-typography-body leading-typography-body text-colour-onSurface-light dark:text-colour-onSurface-dark border-b border-colour-onSurface-outline-light dark:border-colour-onSurface-outline-dark"
          itemprop="name"
        >
          Question 1
        </summary>
        <div
          class="anim-fade-to-b mt-2"
          itemprop="acceptedAnswer"
          itemscope=""
          itemtype="https://schema.org/Answer"
        >
          <div
            class="richtext font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light text-colour-onSurface-light dark:text-colour-onSurface-dark"
            itemprop="text"
          >
            <div
              class="richtext mx-auto w-full space-y-[1em] [&>:first-child]:!mt-0"
            >
              <p
                class="mb-2 dark:text-colour-onSurface-dark text-typography-body font-typography-body-weight leading-typography-body tracking-typography-body"
              >
                Content for Question 1
              </p>
            </div>
          </div>
        </div>
      </details>
      <details
        class="accordion"
        itemprop="mainEntity"
        itemscope=""
        itemtype="https://schema.org/Question"
      >
        <summary
          class="py-[10px] font-typography-body font-typography-body-weight text-typography-body leading-typography-body text-colour-onSurface-light dark:text-colour-onSurface-dark border-b border-colour-onSurface-outline-light dark:border-colour-onSurface-outline-dark"
          itemprop="name"
        >
          Question 2
        </summary>
        <div
          class="anim-fade-to-b mt-2"
          itemprop="acceptedAnswer"
          itemscope=""
          itemtype="https://schema.org/Answer"
        >
          <div
            class="richtext font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light text-colour-onSurface-light dark:text-colour-onSurface-dark"
            itemprop="text"
          >
            <div
              class="richtext mx-auto w-full space-y-[1em] [&>:first-child]:!mt-0"
            >
              <p
                class="mb-2 dark:text-colour-onSurface-dark text-typography-body font-typography-body-weight leading-typography-body tracking-typography-body"
              >
                Content for Question 2
              </p>
            </div>
          </div>
        </div>
      </details>
      <details
        class="accordion"
        itemprop="mainEntity"
        itemscope=""
        itemtype="https://schema.org/Question"
      >
        <summary
          class="py-[10px] font-typography-body font-typography-body-weight text-typography-body leading-typography-body text-colour-onSurface-light dark:text-colour-onSurface-dark border-b border-colour-onSurface-outline-light dark:border-colour-onSurface-outline-dark"
          itemprop="name"
        >
          Question 3
        </summary>
        <div
          class="anim-fade-to-b mt-2"
          itemprop="acceptedAnswer"
          itemscope=""
          itemtype="https://schema.org/Answer"
        >
          <div
            class="richtext font-typography-body-light font-typography-body-light-weight text-typography-body-light leading-typography-body-light text-colour-onSurface-light dark:text-colour-onSurface-dark"
            itemprop="text"
          >
            <div
              class="richtext mx-auto w-full space-y-[1em] [&>:first-child]:!mt-0"
            >
              <p
                class="mb-2 dark:text-colour-onSurface-dark text-typography-body font-typography-body-weight leading-typography-body tracking-typography-body"
              >
                Content for Question 3
              </p>
            </div>
          </div>
        </div>
      </details>
    </div>
  </section>
</div>
`;
